# skills

./: LICENSE  README.md
.claude-plugin/: marketplace.json
plugins/logreader-mcp/: .mcp.json  README.md  pyproject.toml  run.sh  run_server.py
plugins/logreader-mcp/.claude-plugin/: plugin.json
plugins/logreader-mcp/src/logreader_mcp/: analysis.py  bootstrap.py  panda.py  panda_trace.py  route_cache.py  server.py
plugins/mici-ui-mcp/: .mcp.json  README.md  run.sh  run_server.py
plugins/mici-ui-mcp/.claude-plugin/: plugin.json
plugins/mici-ui-mcp/skills/mici-ui-mcp/: SKILL.md
plugins/mici-ui-mcp/src/mici_ui_mcp/: server.py
