[project]
name = "logreader-mcp"
version = "0.1.0"
description = "MCP server to analyze openpilot routes: cereal, CAN/DBC, events, anomaly scan, and a panda safety debugger"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.2.0",
  "numpy",
]

[project.scripts]
logreader-mcp = "logreader_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logreader_mcp"]
